# FastSelect

./: .gitignore  .readthedocs.yaml  BenchmarkingRelief.ipynb  CHANGELOG.md  CITATION.cff  MultiSURF.py  README.md  Untitled.ipynb  __init__.py  paper.md  pyproject.toml  requirements.txt  test_estimators.py
.github/workflows/: publish-to-pypi.yml  python-tests.yml
benchmarking/: BenchmarkingChi.ipynb  BenchmarkingRelief.ipynb  BenchmarkingRelief2.ipynb  benchmarking.py  benchmarking_cfs.py  benchmarking_mdr.py  benchmarking_mrmr.py  plots.py  testing.py
docs/source/: api.md  conf.py  index.md  installation.md  quickstart.md  user_guide.md
github/workflows/: python-tests.yml
source/: api.md  index.md
src/fast_relief/: MultiSURF.py  ReliefF.py  SURF.py  TuRF.py  temp.py
src/fast_select/: CFS.py  Chi2.py  MDR.py  MultiSURF.py  ReliefF.py  SURF.py  TuRF.py  __init__.py  chi2.py  mRMR.py  mutual_information.py  reliefF.R
src/others/: BenchmarkingChi2.ipynb  chi2.py  mRMR.py
tests/: test_cfs.py  test_chi2.py  test_mdr.py  test_mrmr.py  test_multisurf.py  test_relieff.py  test_surf.py  test_turf.py
